--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,3 +1,11 @@
+.spin {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
 .cards {
   max-width: 1000px;
   margin: 15px auto;
@@ -9,3 +17,4 @@
 .card {
   margin: 15px 0;
 }
+
